# sre

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  main.zig  speedrun.h
src/: common.h  lr35902.c  lr35902.h  main.c  mips.h  ps2.h
